--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^14.2.15",
     "lucide": "^0.460.0",
     "lucide-react": "^0.460.0",
+    "motion": "^11.12.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
