--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "clsx": "^2.1.1",
     "lucide": "^0.460.0",
     "lucide-react": "^0.460.0",
     "motion": "^11.12.0",
